add manual usage to pump
